<resources>
    <string name="app_name">Jurnal Guruku</string>
    <string name="title_activity_beranda_guru">BerandaGuru</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="jadwal">Jadwal</string>
    <string name="mengajar">Mengajar</string>
    <string name="permintaan">Permintaan</string>
    <string name="data_mengajar_aktif">Data Mengajar Aktif</string>
    <string name="jadwal_hari_ini">Jadwal Hari Ini</string>
    <string name="jadwal_mengajar">Jadwal Mengajar Anda</string>
    <string name="jadwal_hari_ini_siswa">Jadwal Anda Hari Ini </string>
    <string name="data_mengajar_aktif_siswa">Data Mengajar Aktif/ Menunggu Rating</string>

    <string name="satu_jurusan">Satu Jurusan</string>
    <string name="semua_jurusan">Semua Jurusan</string>
    <string name="riwayat_anda">Riwayat Anda</string>

    <string name="detail_jadwal">Detail Jadwal</string>

    <string name="mengajar1">Data Mengajar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="jadwal_kelas_anda">Jadwal Kelas Anda</string>
    <string name="detail_jadwal_kelas">Detail Jadwal Kelas</string>
    <string name="permintaan_guru_pengganti">Permintaan Guru Pengganti</string>
    <string name="detail_permintaan">Detail Permintaan</string>
    <string name="detail_permintaan_guru_pengganti">Detail Permintaan Guru Pengganti</string>
    <string name="detail_mengajar">Detail Mengajar</string>
    <string name="data_hasil_mengajar">Data Hasil Mengajar</string>
    <string name="catatan_siswa">Catatan Siswa</string>
    <string name="tipe_guru">Tipe Guru</string>
    <string name="akun">Akun</string>

</resources>
