<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jurnal_guruku.guru.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_jadwal"
        android:name="com.example.jurnal_guruku.guru.ui.dashboard.DashboardFragment"
        android:label="@string/jadwal"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_mengajar"
        android:name="com.example.jurnal_guruku.guru.ui.jadwal.JadwalFragment"
        android:label="@string/mengajar"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_permintaan"
        android:name="com.example.jurnal_guruku.guru.ui.jadwal.JadwalFragment"
        android:label="@string/permintaan"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.jurnal_guruku.guru.ui.jadwal.JadwalFragment"
        android:label="@string/akun"
        tools:layout="@layout/fragment_notifications" />
</navigation>
